# Inventory

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
docker_compose/: dev.yaml
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/base/: decorators.py  permissions.py
src/api/v1/categories/: handlers.py  serializers.py
src/api/v1/equipments/: handlers.py  serializers.py
src/api/v1/stocks/: handlers.py  serializers.py
src/api/v1/users/: handlers.py  serializers.py
src/apps/base/: exception_handler.py  exceptions.py
src/apps/inventory/: admin.py  exceptions.py  models.py
src/apps/inventory/migrations/: 0001_initial.py  0002_initial.py
src/apps/inventory/services/: categories.py  equipments.py  stocks.py
src/apps/users/: admin.py  exceptions.py  models.py  services.py
src/apps/users/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/tests/: test_data.py
src/tests/services/: conftest.py  test_category.py  test_equipments.py  test_stocks.py  test_users.py
